# m5unified-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: host-check.yml
crates/m5unified/: Cargo.toml
crates/m5unified-avatar/: Cargo.toml
crates/m5unified-avatar/src/: lib.rs
crates/m5unified-sys/: Cargo.toml  build.rs
crates/m5unified-sys/native/: CMakeLists.txt  README.md  idf_component.yml  m5u_shim.cpp  m5u_shim.h  m5u_shim_stub.cpp
crates/m5unified-sys/src/: lib.rs
crates/m5unified-sys/tests/: hello_display_firmware_scaffold.rs  native_component_scaffold.rs
crates/m5unified/src/: audio.rs  buttons.rs  canvas.rs  cardputer.rs  config.rs  display.rs  error.rs  i2c.rs  imu.rs  io_expander.rs  led.rs  lib.rs  log.rs  power.rs  rtc.rs  sd.rs  servo.rs  system.rs  timer.rs  touch.rs
docs/: publishing.md
docs/examples/: README.md  api-gap-report.md  hardware-verification.md  upstream-examples.toml
docs/plans/: 2026-05-15-m5unified-rs-roadmap.md  2026-05-16-complete-m5unified-examples.md
examples/: Cargo.toml  README.md  build.rs  sdkconfig.defaults
examples/.cargo/: config.toml
examples/components/m5unified-rs/: CMakeLists.txt  idf_component.yml
examples/src/: lib.rs
examples/tools/python/: sitecustomize.py
firmware/cardputer-keyboard/: Cargo.toml  README.md
firmware/cardputer-keyboard/components/m5unified-rs/: CMakeLists.txt  idf_component.yml
firmware/cardputer-keyboard/src/: main.rs
firmware/hello-display/: Cargo.toml  README.md  sdkconfig.defaults
firmware/hello-display/.cargo/: config.toml
firmware/hello-display/components/m5unified-rs/: CMakeLists.txt
firmware/hello-display/src/: main.rs
scripts/: check-esp32s3-firmware.sh  check-host.sh
tools/: build_espidf_smoke.sh  check_examples_manifest.py  check_no_sys_in_examples.py  inventory_upstream_examples.py
