[package]
name = "m5unified-examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
default-run = "basic_how_to_use"

[dependencies]
m5unified = { path = "../crates/m5unified" }
m5unified-avatar = { path = "../crates/m5unified-avatar" }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.37.2", default-features = false, features = ["std", "binstart"] }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[package.metadata.esp-idf-sys]
esp_idf_version = "v5.3.2"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components"]
