[package]
name = "m5unified-sys"
version = "0.3.7"
edition.workspace = true
rust-version = "1.85"
license.workspace = true
repository.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/m5unified-sys"
description = "Raw Rust bindings for M5Unified via a C ABI shim."
keywords = ["m5stack", "m5unified", "esp32", "esp-idf", "ffi"]
categories = ["embedded", "external-ffi-bindings", "hardware-support"]
links = "m5unified"
build = "build.rs"
include = [
    "Cargo.toml",
    "build.rs",
    "src/**",
    "native/**",
    "../../README.md",
    "../../LICENSE",
]

[lib]
path = "src/lib.rs"

[build-dependencies]
