[package]
name = "m5unified"
version = "0.3.7"
edition.workspace = true
rust-version = "1.85"
license.workspace = true
repository.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/m5unified"
description = "Safe Rust wrapper for M5Unified."
keywords = ["m5stack", "m5unified", "esp32", "esp-idf", "embedded"]
categories = ["embedded", "hardware-support", "api-bindings"]
include = [
    "Cargo.toml",
    "src/**",
    "../../README.md",
    "../../LICENSE",
]

[lib]
path = "src/lib.rs"

[dependencies]
m5unified-sys.workspace = true
